# rust_todo_application

./: .env.example  .env.test  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
frontend/: app.js  index.html  styles.css
migrations/: 20250929121338_create_todos_table.sql  20250929154718_init_todos.sql  20250929173325_cleanup_legacy_updated_at_trigger.sql
scripts/: test.sh
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  repo.rs
src-tauri/src/db/: connection.rs
src-tauri/tests/: repo_smoke.rs
src/models/: mod.rs  priority.rs  todo.rs
