[package]
name = "rust-todo-core"
version = "0.1.0"
edition = "2021"
description = "Core domain + data layer for the Rust TODO app (shared with Tauri shell)."
license = "MIT"

# The workspace root; includes the Tauri shell crate.
[workspace]
members = ["src-tauri"]

# ---- Library target (shared with src-tauri) ----
[lib]
name = "rust_todo_core"      # crate name used by dependents
path = "src/lib.rs"

# ---- Binary target (optional CLI/server) ----
[[bin]]
name = "rust-todo-core"      # `cargo run --bin rust-todo-core`
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework (optional—only if you’re exposing an HTTP API)
axum = { version = "0.7", features = ["macros"] }

# Database (PostgreSQL + migrations)
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Env loading (use in dev; on prod rely on real env vars)
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Middleware (if you use Axum)
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
