[package]
name = "rust-todo-app"
version = "0.1.0"
edition = "2021"
description = "A Tauri v2-based TODO application with Rust backend"
authors = ["Ian Kabaka"]
license = ""
repository = ""

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared core crate (Option A)
rust_todo_core = { package = "rust-todo-core", path = ".." }

# Tauri v2
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"

# App deps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"

[features]
default = []
